--- a/dev/index.html
+++ b/dev/index.html
@@ -1,18 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Turbo Demo</title>
-    <link rel="stylesheet" href="./src/index.css">
-</head>
-<body>
-    <div id="app"></div>
-    <script>
-        if (global === undefined) {
-          var global = window;
-        }
-    </script>
-    <script type="module" src="./src/index.tsx"></script>
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Sync</title>
+    </head>
+    <body>
+        <div id="app"></div>
+        <script type="module" src="./src/index.tsx"></script>
+    </body>
 </html>
